--- a/validation_system/examples/data_manipulation_example.ipynb
+++ b/validation_system/examples/data_manipulation_example.ipynb
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "id": "81f3082d",
    "metadata": {},
    "outputs": [],
@@ -388,29 +388,31 @@
     "        :return: Словарь с гиперпараметрами.\n",
     "        \"\"\"\n",
     "        if isinstance(model, RandomForestRegressor):\n",
-    "            return self.__get_params_from_sklearn_model(\"RandomForestRegressor\", model)\n",
+    "            return self.__get_params_from_sklearn_model(\"random_forest\", model)\n",
     "        elif isinstance(model, ElasticNet):\n",
-    "            return self.__get_params_from_sklearn_model(\"ElasticNet\", model)\n",
+    "            return self.__get_params_from_sklearn_model(\"elastic_net\", model)\n",
     "        elif isinstance(model, HuberRegressor):\n",
-    "            return self.__get_params_from_sklearn_model(\"HuberRegressor\", model)\n",
+    "            return self.__get_params_from_sklearn_model(\"huber\", model)\n",
     "        elif isinstance(model, Lasso):\n",
-    "            return self.__get_params_from_sklearn_model(\"Lasso\", model)\n",
+    "            return self.__get_params_from_sklearn_model(\"lasso\", model)\n",
     "        elif isinstance(model, RANSACRegressor):\n",
-    "            return self.__get_params_from_sklearn_model(\"RANSACRegressor\", model)\n",
+    "            return self.__get_params_from_sklearn_model(\"ransac\", model)\n",
     "        elif isinstance(model, Ridge):\n",
-    "            return self.__get_params_from_sklearn_model(\"Ridge\", model)\n",
+    "            return self.__get_params_from_sklearn_model(\"ridge\", model)\n",
     "        elif isinstance(model, TheilSenRegressor):\n",
-    "            return self.__get_params_from_sklearn_model(\"TheilSenRegressor\", model)\n",
+    "            return self.__get_params_from_sklearn_model(\"theil_sen\", model)\n",
     "        elif isinstance(model, CatBoostRegressor):\n",
-    "            return self.__get_params_from_sklearn_model(\"CatBoostRegressor\", model) # в catboost такой же метод для извлечения гиперпараметров\n",
+    "            return self.__get_params_from_sklearn_model(\"catboost\", model) # в catboost такой же метод для извлечения гиперпараметров\n",
     "        elif isinstance(model, Holt) and isinstance(model_fit, statsmodels.tsa.holtwinters.results.HoltWintersResultsWrapper):\n",
-    "            return self.__get_params_from_statsmodels_model(\"Holt\", model_fit)\n",
+    "            return self.__get_params_from_statsmodels_model(\"holt\", model_fit)\n",
     "        elif isinstance(model, SimpleExpSmoothing) and isinstance(model_fit, statsmodels.tsa.holtwinters.results.HoltWintersResultsWrapper):\n",
-    "            return self.__get_params_from_statsmodels_model(\"ExpSmoothing\", model_fit)\n",
+    "            return self.__get_params_from_statsmodels_model(\"exp_smoothing\", model_fit)\n",
     "        elif isinstance(model, ExponentialSmoothing) and isinstance(model_fit, statsmodels.tsa.holtwinters.results.HoltWintersResultsWrapper):\n",
-    "            return self.__get_params_from_statsmodels_model(\"HoltWinters\", model_fit)\n",
+    "            return self.__get_params_from_statsmodels_model(\"holt_winters\", model_fit)\n",
+    "        elif isinstance(model, SARIMAX) and isinstance(model_fit, statsmodels.tsa.statespace.sarimax.SARIMAXResultsWrapper):\n",
+    "            return self.__get_params_from_statsmodels_model(\"sarima\", model_fit)\n",
     "        elif isinstance(model, Prophet):\n",
-    "            return self.__get_params_from_prophet_model(\"Prophet\", model)\n",
+    "            return self.__get_params_from_prophet_model(\"prophet\", model)\n",
     "        else:\n",
     "            raise ValueError(\"Неподдерживаемая модель\")\n",
     "\n",
@@ -751,24 +753,6 @@
    "metadata": {},
    "source": [
     "Пример получения гиперпараметров моделей"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "id": "be8dca03",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<statsmodels.tsa.holtwinters.results.HoltWintersResultsWrapper object at 0x71ce9b50f9b0>\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(model_fit_expsmoothing)"
    ]
   },
   {
