--- a/validation_system/examples/validation_example.ipynb
+++ b/validation_system/examples/validation_example.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "70b834aa",
    "metadata": {},
    "outputs": [],
@@ -301,7 +301,6 @@
     "        provided_step = self.__to_list(data.get(\"holt_step\"))\n",
     "        self.__check_values(provided_step, min_step, max_step, default_step, \"holt_step\")\n",
     "\n",
-    "#### переделать метод для holt_winters\n",
     "    def __holt_winters(self, data: dict):\n",
     "        \"\"\"\n",
     "        Метод для проверки гиперпараметров модели Holt Winters\n",
@@ -315,11 +314,27 @@
     "        # задаём стандартные значения\n",
     "        default_trend_types = [\"add\", \"mul\", None]\n",
     "        default_seasonal_types = [\"add\", \"mul\", None]\n",
-    "        default_sesonalities = {\n",
-    "            \"Year\": [4, 6, 12, 52, 365],\n",
-    "            \"Week\": [7, 14],\n",
-    "            \"Daily\": [24, 48]\n",
-    "        }\n",
+    "        default_sesonalities = [2, 4, 6, 12, 52, 365, 7, 14, 24, 48, 168] # указать необзодимые\n",
+    "        # проверка trend_types\n",
+    "        try:\n",
+    "            provided_trend_types = self.__to_list(data.get(\"holt_winters_trend_types\"))\n",
+    "            self.__check_list_is_subset(default_trend_types, provided_trend_types)\n",
+    "        except ValueError as e:\n",
+    "            print(f\"holt_winters_trend_types - {e}\")\n",
+    "        # проверка seasonal_types\n",
+    "        try:\n",
+    "            provided_seasonal_types = self.__to_list(data.get(\"holt_winters_seasonal_types\"))\n",
+    "            self.__check_list_is_subset(default_seasonal_types, provided_seasonal_types)\n",
+    "        except ValueError as e:\n",
+    "            print(f\"holt_winters_seasonal_types - {e}\")\n",
+    "        # проверка seasonality\n",
+    "        try:\n",
+    "            provided_min_seasonality = self.__to_list(data.get(\"holt_winters_min_seasonality\"))\n",
+    "            self.__check_list_is_subset(default_sesonalities, provided_min_seasonality)\n",
+    "            provided_max_seasonality = self.__to_list(data.get(\"holt_winters_max_seasonality\"))\n",
+    "            self.__check_list_is_subset(default_sesonalities, provided_max_seasonality)\n",
+    "        except ValueError as e:\n",
+    "            print(f\"holt_winters_seasonality - {e}\")\n",
     "\n",
     "    def __huber(self, data: dict):\n",
     "        \"\"\"\n",
@@ -811,8 +826,7 @@
     "            case 'holt':\n",
     "                self.__holt(param)\n",
     "            case 'holt_winters':\n",
-    "                #self.__holt_winters(param)\n",
-    "                pass\n",
+    "                self.__holt_winters(param)\n",
     "            case 'huber':\n",
     "                self.__huber(param)\n",
     "            case 'lasso':\n",
