--- a/validation_system/examples/data_manipulation_example.ipynb
+++ b/validation_system/examples/data_manipulation_example.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "f0be0ac8",
    "metadata": {},
    "outputs": [],
@@ -19,12 +19,7 @@
     "import numpy as np\n",
     "import matplotlib as plt\n",
     "\n",
-    "import json\n",
-    "import os\n",
-    "from datetime import datetime\n",
     "import logging\n",
-    "\n",
-    "import joblib\n",
     "\n",
     "from sklearn.linear_model import ElasticNet, HuberRegressor, Lasso, \\\n",
     "                                RANSACRegressor, Ridge, TheilSenRegressor\n",
@@ -33,7 +28,9 @@
     "from statsmodels.tsa.api import Holt, SimpleExpSmoothing, ExponentialSmoothing, SARIMAX\n",
     "import statsmodels\n",
     "from prophet import Prophet\n",
-    "from prophet.serialize import model_to_json"
+    "from prophet.serialize import model_to_json\n",
+    "\n",
+    "from validation_system.dataloader import DataLoader"
    ]
   },
   {
@@ -240,234 +237,6 @@
     "    df.loc[cols + 1:cols + n_predict + 1, 'y_pred'] = df.iloc[cols + 1:cols + n_predict + 1].apply(\n",
     "        lambda x: x.y_pred * dict_seasonality[x.indexes], axis=1)\n",
     "    return df.y_pred.reset_index(drop=True)  # , {'alpha': alpha, 'beta': beta}\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "81f3082d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class DataLoader():\n",
-    "    \"\"\"\n",
-    "    Класс для работы с загрузкой и выгрузкой гиперпараметров моделей и самих экземпляров обученных моделей.\n",
-    "    \"\"\"\n",
-    "    def __init__(self, filepath: str):\n",
-    "        \"\"\"\n",
-    "        :param filepath: Путь до файла\n",
-    "        \"\"\"\n",
-    "        self.filepath = filepath\n",
-    "\n",
-    "    def load_hyperparams_from_optimacros(self) -> tuple[list, list]:\n",
-    "        \"\"\"\n",
-    "        Метод для загрузки гиперпараметров, полученных от OptiMacros\n",
-    "\n",
-    "        :return: Список моделей и список гиперпараметров\n",
-    "        \"\"\"\n",
-    "        try:\n",
-    "            data = pd.read_csv(self.filepath)\n",
-    "            # переводим сразу из json в python-словари\n",
-    "            data.loc[:, 'Params'] = data.loc[:, 'Params'].apply(json.loads)\n",
-    "            models = data.loc[:, 'Models'].to_list()\n",
-    "            hyperparams = []\n",
-    "            for model in models:\n",
-    "                model_info = data.loc[(data.Models == model), 'Params'].iloc[0]\n",
-    "                hyperparams.append(model_info[model])\n",
-    "            return models, hyperparams\n",
-    "        except FileNotFoundError:\n",
-    "            print(f\"Такого файла не существует\")\n",
-    "\n",
-    "    def load_hyperparams_from_python(self) -> tuple[list, list, list]:\n",
-    "        \"\"\"\n",
-    "        Метод для загрузки гиперпараметров, полученных от Python\n",
-    "\n",
-    "        :return: Список моделей, список гиперпараметров и список версий\n",
-    "        \"\"\"\n",
-    "        try:\n",
-    "            data = pd.read_csv(self.filepath)\n",
-    "            # переводим сразу из json в python-словари\n",
-    "            data.loc[:, 'Params'] = data.loc[:, 'Params'].apply(json.loads)\n",
-    "            models = data.loc[:, 'Models'].to_list()\n",
-    "            versions = data.loc[:, 'Version'].to_list()\n",
-    "            hyperparams = []\n",
-    "            for model in models:\n",
-    "                model_info = data.loc[(data.Models == model), 'Params'].iloc[0]\n",
-    "                hyperparams.append(model_info[model])\n",
-    "            return models, hyperparams, versions\n",
-    "        except FileNotFoundError:\n",
-    "            print(f\"Такого файла не существует\")\n",
-    "\n",
-    "    def backup_hyperparams(self, models: list, hyperparams: list) -> str:\n",
-    "        \"\"\"\n",
-    "        Метод для резервного копирования гиперпараметров.\n",
-    "\n",
-    "        :param models: Список моделей;\n",
-    "        :param hyperparams: Список гиперпараметрой.\n",
-    "        :return: Путь до файла с резервной копией.\n",
-    "        \"\"\"\n",
-    "        dir_path = os.path.dirname(self.filepath)\n",
-    "        file_name = os.path.basename(self.filepath)\n",
-    "        current_datetime = datetime.now().strftime(\"%Y_%m_%d_%H_%M\")\n",
-    "        versions = [current_datetime] * len(models)\n",
-    "        data = {\"Models\": models, \"Params\": hyperparams, \"Versions\": versions}\n",
-    "        df = pd.DataFrame(data)\n",
-    "        df.loc[:, 'Params'] = df.loc[:, 'Params'].apply(json.dumps)\n",
-    "        filepath = os.path.join(dir_path, f\"{current_datetime}_back_up_{file_name}\")\n",
-    "        df.to_csv(filepath)\n",
-    "        return filepath\n",
-    "    \n",
-    "    def __save_custom_model(self, model: str, hyperparams: list):\n",
-    "        \"\"\"\n",
-    "        Метод для для сохранения гиперпараметров самописных моделей.\n",
-    "\n",
-    "        :param model: Название модели;\n",
-    "        :paran hyperparams: Гипепараметры модели.\n",
-    "        \"\"\"\n",
-    "        current_datetime = datetime.now().strftime(\"%Y_%m_%d_%H_%M\")\n",
-    "        new_data = pd.DataFrame({'Models': model, 'Params': hyperparams, 'Version': current_datetime})\n",
-    "        # если файл существует и не пуст - читаем и добавляем данные\n",
-    "        if os.path.exists(self.filepath) and os.path.getsize(self.filepath) > 0:\n",
-    "            old_data = pd.read_csv(f\"{self.filepath}.csv\")\n",
-    "            combined_data = pd.concat([old_data, new_data], ignore_index=True)\n",
-    "            combined_data.to_csv(f\"{self.filepath}.csv\", index=False)\n",
-    "        else:  # если файла нет или он пуст - просто сохраняем новые данные\n",
-    "            new_data.to_csv(f\"{self.filepath}.csv\", index=False)\n",
-    "\n",
-    "    def __get_params_from_sklearn_model(self, model_name: str, model) -> dict:\n",
-    "        \"\"\"\n",
-    "        Метод для извлечения параметров из Sklearn моделей.\n",
-    "\n",
-    "        :param model_name: Название модели;\n",
-    "        :param model: Экземпляр модели.\n",
-    "        :return: Словарь с гиперпараметрами.\n",
-    "        \"\"\"\n",
-    "        params = model.get_params()\n",
-    "        return {\"Model\": model_name,\n",
-    "                    \"Params\": params}\n",
-    "    \n",
-    "    def __get_params_from_statsmodels_model(self, model_name: str, model) -> dict:\n",
-    "        \"\"\"\n",
-    "        Метод для извлечения параметров из Statsmodels моделей.\n",
-    "\n",
-    "        :param model_name: Название модели;\n",
-    "        :param model: Экземпляр модели.\n",
-    "        :return: Словарь с гиперпараметрами.\n",
-    "        \"\"\"\n",
-    "        params = model.params\n",
-    "        return {\"Model\": model_name,\n",
-    "                    \"Params\": params}    \n",
-    "    \n",
-    "    def __get_params_from_prophet_model(self, model_name: str, model) -> dict:\n",
-    "        \"\"\"\n",
-    "        Метод для извлечения параметров из Prophet модели.\n",
-    "\n",
-    "        :param model_name: Название модели;\n",
-    "        :param model: Экземпляр модели.\n",
-    "        :return: Словарь с гиперпараметрами.\n",
-    "        \"\"\"\n",
-    "        params = model.params\n",
-    "        return {\"Model\": model_name,\n",
-    "                    \"Params\": params}   \n",
-    "\n",
-    "    def get_params(self, model, model_fit = None) -> dict:\n",
-    "        \"\"\"\n",
-    "        Метод для извлечения параметров из обученных экземпляров моделей.\n",
-    "        Поддерживаются следующие модели:\n",
-    "\n",
-    "        \"RandomForestRegressor\", \"ElasticNet\", \"HuberRegressor\", \"Lasso\", \"RANSACRegressor\", \n",
-    "        \"Ridge\", \"TheilSenRegressor\", \"CatBoostRegressor\", \"Holt\", \"SimpleExpSmoothing\", \n",
-    "        \"ExponentialSmoothing\", \"Prophet\". \n",
-    "        \n",
-    "        При использовании Sklearn моделей или Prophet необходимо передавать сам экземпляр модели без model_fit\n",
-    "        \n",
-    "        При использовании statsmodels необходимо передавать model и результат model.fit(), т.е results = model.fit() - необходимо передать results.\n",
-    "        \n",
-    "        :param model: Экземпляр модели.\n",
-    "        :param model_fit: Результат fit() для statsmodels моделей. Необязательный параметр.\n",
-    "        :return: Словарь с гиперпараметрами.\n",
-    "        \"\"\"\n",
-    "        if isinstance(model, RandomForestRegressor):\n",
-    "            return self.__get_params_from_sklearn_model(\"random_forest\", model)\n",
-    "        elif isinstance(model, ElasticNet):\n",
-    "            return self.__get_params_from_sklearn_model(\"elastic_net\", model)\n",
-    "        elif isinstance(model, HuberRegressor):\n",
-    "            return self.__get_params_from_sklearn_model(\"huber\", model)\n",
-    "        elif isinstance(model, Lasso):\n",
-    "            return self.__get_params_from_sklearn_model(\"lasso\", model)\n",
-    "        elif isinstance(model, RANSACRegressor):\n",
-    "            return self.__get_params_from_sklearn_model(\"ransac\", model)\n",
-    "        elif isinstance(model, Ridge):\n",
-    "            return self.__get_params_from_sklearn_model(\"ridge\", model)\n",
-    "        elif isinstance(model, TheilSenRegressor):\n",
-    "            return self.__get_params_from_sklearn_model(\"theil_sen\", model)\n",
-    "        elif isinstance(model, CatBoostRegressor):\n",
-    "            return self.__get_params_from_sklearn_model(\"catboost\", model) # в catboost такой же метод для извлечения гиперпараметров\n",
-    "        elif isinstance(model, Holt) and isinstance(model_fit, statsmodels.tsa.holtwinters.results.HoltWintersResultsWrapper):\n",
-    "            return self.__get_params_from_statsmodels_model(\"holt\", model_fit)\n",
-    "        elif isinstance(model, SimpleExpSmoothing) and isinstance(model_fit, statsmodels.tsa.holtwinters.results.HoltWintersResultsWrapper):\n",
-    "            return self.__get_params_from_statsmodels_model(\"exp_smoothing\", model_fit)\n",
-    "        elif isinstance(model, ExponentialSmoothing) and isinstance(model_fit, statsmodels.tsa.holtwinters.results.HoltWintersResultsWrapper):\n",
-    "            return self.__get_params_from_statsmodels_model(\"holt_winters\", model_fit)\n",
-    "        elif isinstance(model, SARIMAX) and isinstance(model_fit, statsmodels.tsa.statespace.sarimax.SARIMAXResultsWrapper):\n",
-    "            return self.__get_params_from_statsmodels_model(\"sarima\", model_fit)\n",
-    "        elif isinstance(model, Prophet):\n",
-    "            return self.__get_params_from_prophet_model(\"prophet\", model)\n",
-    "        else:\n",
-    "            raise ValueError(\"Неподдерживаемая модель\")\n",
-    "\n",
-    "\n",
-    "    def save_trained_model(self, model, filepath: str):\n",
-    "        \"\"\"\n",
-    "        Метод для сохранения обученной модели. В зависимости от модели \n",
-    "        сохраняет либо саму модель, либо только её гиперпараметры. Если передаются гиперпараметры модели, необходимо\n",
-    "        передавать словарь вида {\"model_name\": [hyperparams]}. Если передаётся сама модель, то необходимо передавать сам объект.\n",
-    "        :param model: Обученная модель;\n",
-    "        :param filepath: Путь до файла. Возможна дозапись в конец файла. Не указывать расширение файла - оно будет выбрано автоматически.\n",
-    "        \"\"\"\n",
-    "        self.filepath = filepath\n",
-    "        custom_models = [\"croston_tsb\", \"rol_mean\", \"const\", \"symfit_fourier_fft\", \"random_forest\", \n",
-    "                         \"elastic_net\", \"huber\", \"lasso\", \"ransac\", \n",
-    "                         \"ridge\", \"theil_sen\", \"catboost\", \n",
-    "                         \"holt\", \"exp_smoothing\", \"holt_winters\", \n",
-    "                         \"sarima\", \"prophet\", \"polynomial\"]\n",
-    "        if isinstance(model, dict):\n",
-    "            model_name = list(model.keys())[0] # т.к возвращается итерируемый объект\n",
-    "            params = list(model.values())[0]\n",
-    "            if model_name in custom_models:\n",
-    "                self.__save_custom_model(model_name, params)\n",
-    "            else:\n",
-    "                raise ValueError(\"Неподдерживаемая модель\")\n",
-    "        elif isinstance(model, RandomForestRegressor):\n",
-    "            joblib.dump(model, f\"RandomForestRegressor_{self.filepath}.joblib\")\n",
-    "        elif isinstance(model, ElasticNet):\n",
-    "            joblib.dump(model, f\"ElasticNet_{self.filepath}.joblib\")\n",
-    "        elif isinstance(model, HuberRegressor):\n",
-    "            joblib.dump(model, f\"HuberRegressor_{self.filepath}.joblib\")\n",
-    "        elif isinstance(model, Lasso):\n",
-    "            joblib.dump(model, f\"Lasso_{self.filepath}.joblib\")\n",
-    "        elif isinstance(model, RANSACRegressor):\n",
-    "            joblib.dump(model, f\"RANSACRegressor_{self.filepath}.joblib\")\n",
-    "        elif isinstance(model, Ridge):\n",
-    "            joblib.dump(model, f\"Ridge_{self.filepath}.joblib\")\n",
-    "        elif isinstance(model, TheilSenRegressor):\n",
-    "            joblib.dump(model, f\"TheilSenRegressor_{self.filepath}.joblib\")\n",
-    "        elif isinstance(model, CatBoostRegressor):\n",
-    "            model.save_model(f\"CatBoostRegressor_{self.filepath}\", format=\"cbm\")\n",
-    "        elif isinstance(model, Holt):\n",
-    "            joblib.dump(model, f\"Holt_{self.filepath}.joblib\")\n",
-    "        elif isinstance(model, SimpleExpSmoothing):\n",
-    "            joblib.dump(model, f\"SimpleExpSmoothing_{self.filepath}.joblib\")\n",
-    "        elif isinstance(model, ExponentialSmoothing):\n",
-    "            joblib.dump(model, f\"ExponentialSmoothing_{self.filepath}.joblib\")\n",
-    "        elif isinstance(model, SARIMAX):\n",
-    "            joblib.dump(model, f\"SARIMAX_{self.filepath}.joblib\")\n",
-    "        elif isinstance(model, Prophet):\n",
-    "            with open(f'Prophet_{self.filepath}.json', 'w') as fout:\n",
-    "                fout.write(model_to_json(model))\n",
-    "        else:\n",
-    "            raise ValueError(\"Неподдерживаемая модель\")\n",
-    "                "
    ]
   },
   {
