исправил опечатку при сохранении catboost

--- a/validation_system/examples/validation_example.ipynb
+++ b/validation_system/examples/validation_example.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "c3df2320",
    "metadata": {},
    "outputs": [],
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "id": "7f324542",
    "metadata": {},
    "outputs": [
@@ -37,33 +37,33 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Валидация гиперпараметров для модели croston_tsb прошла успешно\n",
-      "Валидация гиперпараметров для модели elastic_net прошла успешно\n",
-      "Валидация гиперпараметров для модели exp_smoothing прошла успешно\n",
-      "Валидация гиперпараметров для модели holt прошла успешно\n",
-      "Валидация гиперпараметров для модели holt_winters прошла успешно\n",
-      "Валидация гиперпараметров для модели huber прошла успешно\n",
-      "Валидация гиперпараметров для модели lasso прошла успешно\n",
-      "Валидация гиперпараметров для модели polynomial прошла успешно\n",
-      "Валидация гиперпараметров для модели ransac прошла успешно\n",
-      "Валидация гиперпараметров для модели ridge прошла успешно\n",
-      "Валидация гиперпараметров для модели rol_mean прошла успешно\n",
-      "Валидация гиперпараметров для модели theil_sen прошла успешно\n",
-      "Валидация гиперпараметров для модели const прошла успешно\n",
-      "Валидация гиперпараметров для модели catboost прошла успешно\n",
-      "Валидация гиперпараметров для модели sarima прошла успешно\n",
-      "Валидация гиперпараметров для модели prophet прошла успешно\n",
-      "Валидация гиперпараметров для модели random_forest прошла успешно\n",
-      "Валидация гиперпараметров для модели symfit_fourier_fft прошла успешно\n"
+      "Проверка croston_tsb прошла успешно\n",
+      "Проверка elastic_net прошла успешно\n",
+      "Проверка exp_smoothing прошла успешно\n",
+      "Проверка holt прошла успешно\n",
+      "Проверка holt_winters прошла успешно\n",
+      "Проверка huber прошла успешно\n",
+      "Проверка lasso прошла успешно\n",
+      "Проверка polynomial прошла успешно\n",
+      "Проверка ransac прошла успешно\n",
+      "Проверка ridge прошла успешно\n",
+      "Проверка rol_mean прошла успешно\n",
+      "Проверка theil_sen прошла успешно\n",
+      "Проверка const прошла успешно\n",
+      "Проверка catboost прошла успешно\n",
+      "Проверка sarima прошла успешно\n",
+      "Проверка prophet прошла успешно\n",
+      "Проверка random_forest прошла успешно\n",
+      "Проверка symfit_fourier_fft прошла успешно\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "'2025_06_30_12_25_back_up_om_correct.csv'"
+       "'2025_06_30_13_41_back_up_om_correct.csv'"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "b9cb613f",
    "metadata": {},
    "outputs": [
@@ -130,10 +130,10 @@
     {
      "data": {
       "text/plain": [
-       "'2025_06_30_12_38_back_up_om_incorrect.csv'"
+       "'2025_06_30_13_41_back_up_om_incorrect.csv'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
