--- a/validation_system/examples/data_manipulation_example.ipynb
+++ b/validation_system/examples/data_manipulation_example.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "f0be0ac8",
    "metadata": {},
    "outputs": [],
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "09033d47",
    "metadata": {},
    "outputs": [],
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "6b2b1192",
    "metadata": {},
    "outputs": [],
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "25b7163e",
    "metadata": {},
    "outputs": [],
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "f4395e8e",
    "metadata": {},
    "outputs": [],
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "ac9819c0",
    "metadata": {},
    "outputs": [],
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 7,
    "id": "46064614",
    "metadata": {},
    "outputs": [
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 8,
    "id": "ebb6fe46",
    "metadata": {},
    "outputs": [
@@ -335,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 9,
    "id": "75501a21",
    "metadata": {},
    "outputs": [
@@ -352,8 +352,7 @@
       "  RandomForestRegressor успешно обучена.\n",
       "  CatBoostRegressor успешно обучена.\n",
       "  SimpleExpSmoothing успешно обучена.\n",
-      "  Holt успешно обучена.\n",
-      "  ExponentialSmoothing успешно обучена.\n"
+      "  Holt успешно обучена.\n"
      ]
     },
     {
@@ -375,9 +374,22 @@
       "/home/flowers/anaconda3/lib/python3.12/site-packages/statsmodels/tsa/base/tsa_model.py:473: ValueWarning: No frequency information was provided, so inferred frequency MS will be used.\n",
       "  self._init_dates(dates, freq)\n",
       "/home/flowers/anaconda3/lib/python3.12/site-packages/statsmodels/tsa/base/tsa_model.py:473: ValueWarning: No frequency information was provided, so inferred frequency MS will be used.\n",
-      "  self._init_dates(dates, freq)\n",
-      "15:31:13 - cmdstanpy - INFO - Chain [1] start processing\n",
-      "15:31:13 - cmdstanpy - INFO - Chain [1] done processing\n"
+      "  self._init_dates(dates, freq)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  ExponentialSmoothing успешно обучена.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "13:48:15 - cmdstanpy - INFO - Chain [1] start processing\n",
+      "13:48:15 - cmdstanpy - INFO - Chain [1] done processing\n"
      ]
     },
     {
@@ -526,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 10,
    "id": "0a563237",
    "metadata": {},
    "outputs": [
@@ -534,48 +546,45 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Гиперпараметры модели ElasticNet: {'Model': 'ElasticNet', 'Params': {'alpha': 1.0, 'copy_X': True, 'fit_intercept': True, 'l1_ratio': 0.5, 'max_iter': 1000, 'positive': False, 'precompute': False, 'random_state': 42, 'selection': 'cyclic', 'tol': 0.0001, 'warm_start': False}}\n",
-      "Гиперпараметры модели HuberRegressor: {'Model': 'HuberRegressor', 'Params': {'alpha': 0.0001, 'epsilon': 1.35, 'fit_intercept': True, 'max_iter': 100, 'tol': 1e-05, 'warm_start': False}}\n",
-      "Гиперпараметры модели Lasso: {'Model': 'ElasticNet', 'Params': {'alpha': 1.0, 'copy_X': True, 'fit_intercept': True, 'max_iter': 1000, 'positive': False, 'precompute': False, 'random_state': 42, 'selection': 'cyclic', 'tol': 0.0001, 'warm_start': False}}\n",
-      "Гиперпараметры модели RANSACRegressor: {'Model': 'RANSACRegressor', 'Params': {'estimator': None, 'is_data_valid': None, 'is_model_valid': None, 'loss': 'absolute_error', 'max_skips': inf, 'max_trials': 100, 'min_samples': None, 'random_state': 42, 'residual_threshold': None, 'stop_n_inliers': inf, 'stop_probability': 0.99, 'stop_score': inf}}\n",
-      "Гиперпараметры модели Ridge: {'Model': 'Ridge', 'Params': {'alpha': 1.0, 'copy_X': True, 'fit_intercept': True, 'max_iter': None, 'positive': False, 'random_state': 42, 'solver': 'auto', 'tol': 0.0001}}\n",
-      "Гиперпараметры модели TheilSenRegressor: {'Model': 'TheilSenRegressor', 'Params': {'copy_X': True, 'fit_intercept': True, 'max_iter': 300, 'max_subpopulation': 10000.0, 'n_jobs': None, 'n_subsamples': None, 'random_state': 42, 'tol': 0.001, 'verbose': False}}\n",
-      "Гиперпараметры модели RandomForestRegressor: {'Model': 'RandomForestRegressor', 'Params': {'bootstrap': True, 'ccp_alpha': 0.0, 'criterion': 'squared_error', 'max_depth': None, 'max_features': 1.0, 'max_leaf_nodes': None, 'max_samples': None, 'min_impurity_decrease': 0.0, 'min_samples_leaf': 1, 'min_samples_split': 2, 'min_weight_fraction_leaf': 0.0, 'monotonic_cst': None, 'n_estimators': 50, 'n_jobs': None, 'oob_score': False, 'random_state': 42, 'verbose': 0, 'warm_start': False}}\n",
-      "Гиперпараметры модели CatBoostRegressor: {'Model': 'CatBoostRegressor', 'Params': {'iterations': 50, 'loss_function': 'RMSE', 'verbose': 0, 'random_state': 42}}\n",
-      "Гиперпараметры модели SimpleExpSmoothing: {'Model': 'ExpSmoothing', 'Params': {'smoothing_level': 0.9999999843600919, 'smoothing_trend': nan, 'smoothing_seasonal': nan, 'damping_trend': nan, 'initial_level': -0.27629577401300076, 'initial_trend': nan, 'initial_seasons': array([], dtype=float64), 'use_boxcox': False, 'lamda': None, 'remove_bias': False}}\n",
-      "Гиперпараметры модели Holt: {'Model': 'Holt', 'Params': {'smoothing_level': 0.9999999850988388, 'smoothing_trend': 0.0, 'smoothing_seasonal': nan, 'damping_trend': nan, 'initial_level': -0.8438830224356809, 'initial_trend': 0.5677085655921876, 'initial_seasons': array([], dtype=float64), 'use_boxcox': False, 'lamda': None, 'remove_bias': False}}\n",
-      "Гиперпараметры модели ExponentialSmoothing: {'Model': 'HoltWinters', 'Params': {'smoothing_level': 1.4972121202943614e-08, 'smoothing_trend': 1.799427079758965e-10, 'smoothing_seasonal': 7.079476094060582e-11, 'damping_trend': nan, 'initial_level': -0.0989561785785633, 'initial_trend': 0.49834917707738274, 'initial_seasons': array([-0.51446807,  1.3496237 ,  4.18954795,  4.58878679,  4.120447  ,\n",
-      "        2.79099945, -0.16207946, -2.03901016, -4.33645862, -5.35177433,\n",
-      "       -4.76896814, -3.17052351]), 'use_boxcox': False, 'lamda': None, 'remove_bias': False}}\n",
-      "Гиперпараметры модели Prophet: {'Model': 'Prophet', 'Params': OrderedDict({'lp__': array([[329.599]]), 'k': array([[0.863772]]), 'm': array([[0.00935853]]), 'delta': array([[-1.00627e-09, -1.59715e-09,  2.35374e-08, -5.45114e-09,\n",
-      "         1.71688e-09,  2.70311e-06,  4.51074e-03,  5.81019e-04,\n",
-      "         2.37736e-04,  1.88964e-03,  3.68986e-03,  1.19085e-02,\n",
-      "         1.84692e-03,  4.55838e-04,  1.34985e-05, -8.07460e-09,\n",
-      "        -1.28095e-08,  1.33093e-08, -3.68889e-10, -3.60449e-09,\n",
-      "        -2.09804e-09,  3.97994e-09, -5.11059e-09, -4.38139e-09,\n",
-      "         2.70381e-09]]), 'sigma_obs': array([[0.0228057]]), 'beta': array([[ 0.0983843 ,  0.00506957, -0.00520616,  0.00917795, -0.0156005 ,\n",
-      "         0.00074893, -0.0665778 ,  0.110536  ,  0.05128   , -0.00435881,\n",
-      "         0.0785606 ,  0.00345782,  0.0532075 ,  0.0194775 , -0.0425751 ,\n",
-      "        -0.128797  , -0.0220804 , -0.0128989 , -0.0160416 , -0.0101116 ]]), 'trend': array([[0.00935853, 0.0182457 , 0.0265594 , 0.0354466 , 0.044047  ,\n",
-      "        0.0529341 , 0.0615346 , 0.0704217 , 0.0793088 , 0.0879093 ,\n",
-      "        0.0967964 , 0.105397  , 0.114284  , 0.123171  , 0.131198  ,\n",
-      "        0.140085  , 0.148686  , 0.157573  , 0.166173  , 0.17506   ,\n",
-      "        0.183948  , 0.192548  , 0.201435  , 0.210081  , 0.219014  ,\n",
-      "        0.227948  , 0.236022  , 0.244962  , 0.253613  , 0.262555  ,\n",
-      "        0.271208  , 0.28015   , 0.289092  , 0.297765  , 0.306726  ,\n",
-      "        0.315399  , 0.324398  , 0.333397  , 0.341526  , 0.350648  ,\n",
-      "        0.359475  , 0.368597  , 0.377443  , 0.386584  , 0.395725  ,\n",
-      "        0.404576  , 0.413722  , 0.422572  , 0.431718  , 0.440864  ,\n",
-      "        0.449419  , 0.458565  , 0.467416  , 0.476562  , 0.485412  ,\n",
-      "        0.494558  , 0.503704  , 0.512555  , 0.5217    , 0.530551  ,\n",
-      "        0.539697  , 0.548842  , 0.557103  , 0.566249  , 0.5751    ,\n",
-      "        0.584245  , 0.593096  , 0.602242  , 0.611388  , 0.620238  ,\n",
-      "        0.629384  , 0.638235  , 0.647381  , 0.656526  , 0.664787  ,\n",
-      "        0.673933  , 0.682784  , 0.691929  , 0.70078   , 0.709926  ,\n",
-      "        0.719071  , 0.727922  , 0.737068  , 0.745919  , 0.755064  ,\n",
-      "        0.76421   , 0.772471  , 0.781617  , 0.790467  , 0.799613  ,\n",
-      "        0.808464  , 0.81761   , 0.826755  , 0.835606  , 0.844752  ,\n",
-      "        0.853603  , 0.862748  , 0.871894  , 0.88045   , 0.889596  ]])})}\n"
+      "Гиперпараметры модели ElasticNet: {'Model': 'elastic_net', 'Params': {'alpha': 1.0, 'copy_X': True, 'fit_intercept': True, 'l1_ratio': 0.5, 'max_iter': 1000, 'positive': False, 'precompute': False, 'random_state': 42, 'selection': 'cyclic', 'tol': 0.0001, 'warm_start': False}}\n",
+      "Гиперпараметры модели HuberRegressor: {'Model': 'huber', 'Params': {'alpha': 0.0001, 'epsilon': 1.35, 'fit_intercept': True, 'max_iter': 100, 'tol': 1e-05, 'warm_start': False}}\n",
+      "Гиперпараметры модели Lasso: {'Model': 'elastic_net', 'Params': {'alpha': 1.0, 'copy_X': True, 'fit_intercept': True, 'max_iter': 1000, 'positive': False, 'precompute': False, 'random_state': 42, 'selection': 'cyclic', 'tol': 0.0001, 'warm_start': False}}\n",
+      "Гиперпараметры модели RANSACRegressor: {'Model': 'ransac', 'Params': {'estimator': None, 'is_data_valid': None, 'is_model_valid': None, 'loss': 'absolute_error', 'max_skips': inf, 'max_trials': 100, 'min_samples': None, 'random_state': 42, 'residual_threshold': None, 'stop_n_inliers': inf, 'stop_probability': 0.99, 'stop_score': inf}}\n",
+      "Гиперпараметры модели Ridge: {'Model': 'ridge', 'Params': {'alpha': 1.0, 'copy_X': True, 'fit_intercept': True, 'max_iter': None, 'positive': False, 'random_state': 42, 'solver': 'auto', 'tol': 0.0001}}\n",
+      "Гиперпараметры модели TheilSenRegressor: {'Model': 'theil_sen', 'Params': {'copy_X': 'deprecated', 'fit_intercept': True, 'max_iter': 300, 'max_subpopulation': 10000.0, 'n_jobs': None, 'n_subsamples': None, 'random_state': 42, 'tol': 0.001, 'verbose': False}}\n",
+      "Гиперпараметры модели RandomForestRegressor: {'Model': 'random_forest', 'Params': {'bootstrap': True, 'ccp_alpha': 0.0, 'criterion': 'squared_error', 'max_depth': None, 'max_features': 1.0, 'max_leaf_nodes': None, 'max_samples': None, 'min_impurity_decrease': 0.0, 'min_samples_leaf': 1, 'min_samples_split': 2, 'min_weight_fraction_leaf': 0.0, 'monotonic_cst': None, 'n_estimators': 50, 'n_jobs': None, 'oob_score': False, 'random_state': 42, 'verbose': 0, 'warm_start': False}}\n",
+      "Гиперпараметры модели CatBoostRegressor: {'Model': 'catboost', 'Params': {'iterations': 50, 'loss_function': 'RMSE', 'verbose': 0, 'random_state': 42}}\n",
+      "Гиперпараметры модели SimpleExpSmoothing: {'Model': 'exp_smoothing', 'Params': {'smoothing_level': 0.9999999850988388, 'smoothing_trend': nan, 'smoothing_seasonal': nan, 'damping_trend': nan, 'initial_level': -0.549052936757062, 'initial_trend': nan, 'initial_seasons': array([], dtype=float64), 'use_boxcox': False, 'lamda': None, 'remove_bias': False}}\n",
+      "Гиперпараметры модели Holt: {'Model': 'holt', 'Params': {'smoothing_level': 0.9999999850435392, 'smoothing_trend': 0.0, 'smoothing_seasonal': nan, 'damping_trend': nan, 'initial_level': -1.0783735441632214, 'initial_trend': 0.5293180071458381, 'initial_seasons': array([], dtype=float64), 'use_boxcox': False, 'lamda': None, 'remove_bias': False}}\n",
+      "Гиперпараметры модели ExponentialSmoothing: {'Model': 'holt_winters', 'Params': {'smoothing_level': 1.4901161193847656e-08, 'smoothing_trend': 9.46705163371776e-11, 'smoothing_seasonal': 0.0, 'damping_trend': nan, 'initial_level': 0.44727529795662285, 'initial_trend': 0.4863021803382317, 'initial_seasons': array([-0.01886745,  2.50166087,  4.12851983,  4.29048977,  4.27994613,\n",
+      "        1.38543857, -0.61040081, -2.94347873, -5.19962483, -4.8365329 ,\n",
+      "       -4.50542346, -1.91459797]), 'use_boxcox': False, 'lamda': None, 'remove_bias': False}}\n",
+      "Гиперпараметры модели Prophet: {'Model': 'prophet', 'Params': OrderedDict({'lp__': array([[316.325]]), 'k': array([[0.824076]]), 'm': array([[0.0210736]]), 'delta': array([[-2.78150e-09, -4.46361e-12,  4.50608e-10,  1.55135e-08,\n",
+      "         8.78277e-09,  4.85360e-03,  5.89679e-03,  1.66776e-02,\n",
+      "         2.79755e-02,  1.40440e-02,  4.00220e-05, -3.87814e-10,\n",
+      "        -3.53351e-09,  3.59089e-09, -6.38809e-09,  1.55921e-09,\n",
+      "        -2.12355e-07, -6.63889e-03, -1.20524e-02, -3.87302e-03,\n",
+      "        -1.43610e-06, -6.53344e-09, -2.59482e-08,  1.84054e-09,\n",
+      "         8.66133e-10]]), 'sigma_obs': array([[0.0254742]]), 'beta': array([[ 0.0843889 ,  0.0242499 , -0.0401913 , -0.222066  ,  0.0125492 ,\n",
+      "        -0.0274832 ,  0.00207236,  0.0639601 ,  0.0772585 ,  0.0888946 ,\n",
+      "        -0.110593  , -0.00897485,  0.0963918 , -0.0591778 ,  0.0195795 ,\n",
+      "        -0.0696543 ,  0.0157192 ,  0.0105244 , -0.0801897 ,  0.203501  ]]), 'trend': array([[0.0210736, 0.0295523, 0.037484 , 0.0459627, 0.0541679, 0.0626466,\n",
+      "        0.0708518, 0.0793305, 0.0878092, 0.0960144, 0.104493 , 0.112698 ,\n",
+      "        0.121177 , 0.129656 , 0.137314 , 0.145793 , 0.153998 , 0.162477 ,\n",
+      "        0.170682 , 0.179161 , 0.187689 , 0.195943 , 0.204471 , 0.212784 ,\n",
+      "        0.221373 , 0.229962 , 0.237875 , 0.246636 , 0.255115 , 0.264163 ,\n",
+      "        0.27292  , 0.281969 , 0.291018 , 0.299914 , 0.309108 , 0.318004 ,\n",
+      "        0.327198 , 0.336392 , 0.344695 , 0.353889 , 0.362786 , 0.37198  ,\n",
+      "        0.380877 , 0.390071 , 0.399264 , 0.408161 , 0.417355 , 0.426252 ,\n",
+      "        0.435446 , 0.444639 , 0.45324  , 0.462434 , 0.471331 , 0.480524 ,\n",
+      "        0.489421 , 0.498615 , 0.507809 , 0.516706 , 0.525831 , 0.534662 ,\n",
+      "        0.543787 , 0.552789 , 0.560919 , 0.56992  , 0.578593 , 0.587554 ,\n",
+      "        0.596227 , 0.605188 , 0.61415  , 0.622822 , 0.631783 , 0.640456 ,\n",
+      "        0.649417 , 0.658379 , 0.666473 , 0.675435 , 0.684107 , 0.693068 ,\n",
+      "        0.701741 , 0.710702 , 0.719664 , 0.728336 , 0.737298 , 0.74597  ,\n",
+      "        0.754932 , 0.763893 , 0.771987 , 0.780949 , 0.789621 , 0.798583 ,\n",
+      "        0.807255 , 0.816216 , 0.825178 , 0.83385  , 0.842812 , 0.851484 ,\n",
+      "        0.860446 , 0.869407 , 0.877791 , 0.886752 ]])})}\n"
      ]
     }
    ],
@@ -605,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 11,
    "id": "540c7636",
    "metadata": {},
    "outputs": [],
